[gd_scene load_steps=10 format=3 uid="uid://m4eqlrlv6nv0"]

[ext_resource type="Script" path="res://common/spawner/spawner.gd" id="1_4f5pq"]
[ext_resource type="PackedScene" uid="uid://bexb6nf80s4w8" path="res://entities/food/steak.tscn" id="2_ld5ch"]
[ext_resource type="PackedScene" uid="uid://dh2jlgd7pu3nu" path="res://entities/food/sushi_nigiri.tscn" id="3_t1lt0"]
[ext_resource type="PackedScene" uid="uid://d2lurdn16604e" path="res://entities/food/burger.tscn" id="4_3oqdv"]
[ext_resource type="PackedScene" uid="uid://ceuw0045gctd3" path="res://entities/poop/poop.tscn" id="5_dyu6q"]

[sub_resource type="Curve3D" id="Curve3D_j1l3a"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 0, 0, 0, 0, -6),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="SphereMesh" id="SphereMesh_h6no1"]
radius = 0.125
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_arbi3"]
albedo_color = Color(1.92523e-06, 0.673662, 0.641084, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_d26y3"]

[node name="Spawner" type="Path3D"]
curve = SubResource("Curve3D_j1l3a")
script = ExtResource("1_4f5pq")
pantry = Array[PackedScene]([ExtResource("2_ld5ch"), ExtResource("3_t1lt0"), ExtResource("4_3oqdv")])
poop_scene = ExtResource("5_dyu6q")

[node name="SpawnPoint" type="PathFollow3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)

[node name="Debugger" type="MeshInstance3D" parent="SpawnPoint"]
mesh = SubResource("SphereMesh_h6no1")
surface_material_override/0 = SubResource("StandardMaterial3D_arbi3")

[node name="FoodSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="PoopSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnPoint" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DespawnPoint"]
shape = SubResource("WorldBoundaryShape3D_d26y3")

[connection signal="timeout" from="FoodSpawnTimer" to="." method="_on_food_spawn_timer_timeout"]
[connection signal="timeout" from="PoopSpawnTimer" to="." method="_on_poop_spawn_timer_timeout"]
[connection signal="area_entered" from="DespawnPoint" to="." method="_on_despawn_point_area_entered"]
